# dataops-platform-playground

./: .gitignore  pyproject.toml
dagster/: hello.py  pyproject.toml  pyproject.toml.example
dagster/src/: definitions.py
