[project]
name = "dataops-platform-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster-webserver>=1.9.5",
    "dagster>=1.9.5",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "src"


