[project]
name = "dataops-platform-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster-webserver>=1.9.5",
    "dagster>=1.9.5",
    "pyspark>=3.5.4",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.8.4",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "src.definitions"

[tool.ruff.lint]
select = [
    "I"
]
